--- a/deny.toml
+++ b/deny.toml
@@ -90,10 +90,8 @@ ignore = [
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
 allow = [
     "GPL-3.0",
-    "MIT",
-    "Apache-2.0",
-    "Unicode-3.0",
-    "Zlib",
+    # "MIT",
+    # "Apache-2.0",
     #"Apache-2.0 WITH LLVM-exception",
 ]
 # The confidence threshold for detecting a license from license text.
